--- a/task/JD_LoonTask.conf
+++ b/task/JD_LoonTask.conf
@@ -1,41 +1,41 @@
 # 京东脚本
-# 張彡个人脚本，自用
+# 張彡自用京东脚本
 
-cron "2 9 * * * " script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_bean_change.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, tag=京东资产变动通知
-cron "2 */2 * * * " script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_unsubscribe.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, tag=取关京东店铺和商品
-cron "0 0,6-18/6 * * * " script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_fruit.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdnc.png, tag=东东农场
-cron "1 7-21/2 * * * " script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_plantBean.js, img-url=https://qxzy.top/rules/QuantumultX/img/jdzd.png, tag=京东种豆得豆
-cron "10 * * * * " script-path=https://raw.githubusercontent.com/whyour/hundun/master/quanx/jx_factory.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdgc.png, tag=京喜工厂(混沌)
-cron "0 1,18 * * * * " script-path=https://raw.githubusercontent.com/whyour/hundun/master/quanx/jx_factory_component.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdgc.png, tag=京喜工厂plus(混沌)
-cron "10 * * * * " script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_jdfactory.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_factory.png, tag=东东工厂
-cron "11 * * * * " script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_superMarket.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jxc.png, tag=东东超市
-cron "13 1,6,22 * * * " script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_health.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, tag=东东健康社区
+cron "2 9 * * *" script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_bean_change.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, tag=京东资产变动通知
+cron "2 */2 * * *" script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_unsubscribe.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, tag=取关京东店铺和商品
+cron "0 0,6-18/6 * * *" script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_fruit.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdnc.png, tag=东东农场
+cron "1 7-21/2 * * *" script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_plantBean.js, img-url=https://qxzy.top/rules/QuantumultX/img/jdzd.png, tag=京东种豆得豆
+cron "10 * * * *" script-path=https://raw.githubusercontent.com/whyour/hundun/master/quanx/jx_factory.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdgc.png, tag=京喜工厂(混沌)
+cron "0 1,18 * * * *" script-path=https://raw.githubusercontent.com/whyour/hundun/master/quanx/jx_factory_component.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdgc.png, tag=京喜工厂plus(混沌)
+cron "10 * * * *" script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_jdfactory.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_factory.png, tag=东东工厂
+cron "11 * * * *" script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_superMarket.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jxc.png, tag=东东超市
+cron "13 1,6,22 * * *" script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_health.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, tag=东东健康社区
 cron "3 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/JD-DailyBonus/JD_DailyBonus.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, tag=京东多合一
-cron "0 */4 * * * " script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_speed_sign.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd_speed_sign.png, tag=京东极速版
-cron "30 9,22 * * * " script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_speed_redpocke.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd_speed_sign.png, tag=京东极速版红包
-cron "2 0-23/4 * * * " script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_cash.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, tag=签到领现金
-cron "10 0 * * * " script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_kd.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd_kd.png, tag=京东快递签到
-cron "10 7 * * * " script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_bean_home.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_bean_home.png, tag=领京豆额外奖励
-cron "5 8,13,19 * * * " script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_cfd.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, tag=京喜财富岛
-cron "5 0,23 * * * " script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_club_lottery.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, tag=摇京豆
-cron "10 0 * * * " script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_jdzz.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, tag=京东赚赚
-cron "10 0 * * * " script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_jin_tie.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, tag=领金贴
-cron "15 0-23/2 * * * " script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_joy.js, img-url=https://qxzy.top/rules/QuantumultX/img/jdcww.png, tag=京东宠汪汪
-cron "15 0-23/1 * * * " script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_joy_feedPets.js, img-url=https://qxzy.top/rules/QuantumultX/img/jdcww.png, tag=京东宠汪汪喂食
-cron "15 10 * * * " script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_joy_run.js, img-url=https://qxzy.top/rules/QuantumultX/img/jdcww.png, tag=宠汪汪邀请助力与赛跑助力
-cron "10 0-21/3 * * * " script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_joy_steal.js, img-url=https://qxzy.top/rules/QuantumultX/img/jdcww.png, tag=宠汪汪偷好友积分与狗粮
-cron "10-20/5 12 * * * " script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_live.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, tag=京东直播
-cron "4 10 * * * " script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_market_lottery.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, tag=幸运大转盘
-cron "3 0-23/2 * * * " script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_moneyTree.js, img-url=https://qxzy.top/rules/QuantumultX/img/jdyqs.png, tag=京东摇钱树
-cron "10 7 * * * " script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_ms.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, tag=京东秒秒币
-cron "15 6-18/6 * * * " script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_pet.js, img-url=https://qxzy.top/rules/QuantumultX/img/jdmc.png, tag=东东萌宠
-cron "12 0-23/6 * * * " script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_pigPet.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdyz.png, tag=京东金融养猪猪
-cron "0 2 * * * " script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_price.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, tag=京东保价
-cron "1 1,2,23 * * * " script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_redPacket.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, tag=京东全民开红包
-cron "20 8 * * * " script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_sgmh.js, img-url=https://qxzy.top/rules/QuantumultX/img/sgmh.png, tag=闪购盲盒
-cron "10 0 * * * " script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_shop.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_shop.png, tag=进店领豆
-cron "8 0-23/3 * * * " script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_speed.js, img-url=https://qxzy.top/rules/QuantumultX/img/jdjs.png, tag=京东天天加速
-cron "10 0-23/8 * * * " script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_try.js, img-url=https://qxzy.top/rules/QuantumultX/img/jdjs.png, tag=京东试用
+cron "0 */4 * * *" script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_speed_sign.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd_speed_sign.png, tag=京东极速版
+cron "30 9,22 * * *" script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_speed_redpocke.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd_speed_sign.png, tag=京东极速版红包
+cron "2 0-23/4 * * *" script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_cash.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, tag=签到领现金
+cron "10 0 * * *" script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_kd.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd_kd.png, tag=京东快递签到
+cron "10 7 * * *" script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_bean_home.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_bean_home.png, tag=领京豆额外奖励
+cron "5 8,13,19 * * *" script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_cfd.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, tag=京喜财富岛
+cron "5 0,23 * * *" script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_club_lottery.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, tag=摇京豆
+cron "10 0 * * *" script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_jdzz.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, tag=京东赚赚
+cron "10 0 * * *" script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_jin_tie.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, tag=领金贴
+cron "15 0-23/2 * * *" script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_joy.js, img-url=https://qxzy.top/rules/QuantumultX/img/jdcww.png, tag=京东宠汪汪
+cron "15 0-23/1 * * *" script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_joy_feedPets.js, img-url=https://qxzy.top/rules/QuantumultX/img/jdcww.png, tag=京东宠汪汪喂食
+cron "15 10 * * *" script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_joy_run.js, img-url=https://qxzy.top/rules/QuantumultX/img/jdcww.png, tag=宠汪汪邀请助力与赛跑助力
+cron "10 0-21/3 * * *" script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_joy_steal.js, img-url=https://qxzy.top/rules/QuantumultX/img/jdcww.png, tag=宠汪汪偷好友积分与狗粮
+cron "10-20/5 12 * * *" script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_live.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, tag=京东直播
+cron "4 10 * * *" script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_market_lottery.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, tag=幸运大转盘
+cron "3 0-23/2 * * *" script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_moneyTree.js, img-url=https://qxzy.top/rules/QuantumultX/img/jdyqs.png, tag=京东摇钱树
+cron "10 7 * * *" script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_ms.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, tag=京东秒秒币
+cron "15 6-18/6 * * *" script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_pet.js, img-url=https://qxzy.top/rules/QuantumultX/img/jdmc.png, tag=东东萌宠
+cron "12 0-23/6 * * *" script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_pigPet.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdyz.png, tag=京东金融养猪猪
+cron "0 2 * * *" script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_price.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, tag=京东保价
+cron "1 1,2,23 * * *" script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_redPacket.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, tag=京东全民开红包
+cron "20 8 * * *" script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_sgmh.js, img-url=https://qxzy.top/rules/QuantumultX/img/sgmh.png, tag=闪购盲盒
+cron "10 0 * * *" script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_shop.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_shop.png, tag=进店领豆
+cron "8 0-23/3 * * *" script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_speed.js, img-url=https://qxzy.top/rules/QuantumultX/img/jdjs.png, tag=京东天天加速
+cron "10 0-23/8 * * *" script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_try.js, img-url=https://qxzy.top/rules/QuantumultX/img/jdjs.png, tag=京东试用
 cron "10 0,7,23 * * *" script-path=https://raw.githubusercontent.com/JDHelloWorld/jd_scripts/main/jd_syj.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_syj.png, tag=赚京豆
 cron "0 8 21-31 5-12 *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_gold_creator.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, tag=金榜创造营
 cron "0 0,1-23/3 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_mohe.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, tag=5G超级盲盒
@@ -48,4 +48,4 @@ cron "0 8,12 * * *" script-path=https://raw.githubusercontent.com/zwf234/rules/m
 cron "21 9 * * *" script-path=https://raw.githubusercontent.com/smiek2221/scripts/master/gua_MMdou.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, tag=MM领京豆
 cron "18 0-23/2 * * *" script-path=https://raw.githubusercontent.com/smiek2221/scripts/master/gua_wealth_island.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, tag=财富大陆
 cron "18 0,1,9,14,18 * * *" script-path=https://raw.githubusercontent.com/smiek2221/scripts/master/gua_wealth_island_help.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, tag=财富大陆互助
-cron "1 8,12,18 * * * " script-path=https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/chinnkarahoi_jd_bookshop.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, tag=京东口袋书店
+cron "1 8,12,18 * * *" script-path=https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/chinnkarahoi_jd_bookshop.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, tag=京东口袋书店
