--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,6 +2,7 @@
 # 电报频道 @qixinscience
 
 cron "* * * * 1/1 ?" script-path=https://raw.githubusercontent.com/zwf234/rules/master/js/jd_Delck.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=清除京东ck
+cron "0 8 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Bahamut/BahamutDailyBonus.js, img-url=https://qxzy.top/rules/QuantumultX/img/bahamutGame.png, tag=巴哈姆特签到
 cron "0 0 0,5,9,14,20 * * ?" script-path=https://qxzy.top/rules/QuantumultX/js/zwf234/jx_hotballoon.js, img-url=https://qxzy.top/rules/QuantumultX/img/jxcfd.png, enabled=true, tag=财富岛热气球
 cron "0 0 0/1 * * ? " script-path=https://qxzy.top/rules/QuantumultX/js/zwf234/jx_cfd.js, img-url=https://qxzy.top/rules/QuantumultX/img/jxcfd.png, enabled=true, tag=京喜财富岛
 cron "30 6 * * *" script-path=https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_goodMorning.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, enabled=true, tag=早起福利
@@ -379,7 +380,6 @@ cron "1 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/script
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/qimao/qmnovel.js, img-url=https://qxzy.top/rules/QuantumultX/img/qimao.png, enabled=true, tag=七猫小说
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/qmkg/qmkg.js, img-url=https://qxzy.top/rules/QuantumultX/img/qmkg.png, enabled=true, tag=全民K歌
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/qqmusic/qqmusic.js, img-url=https://qxzy.top/rules/QuantumultX/img/qqmusic.png, enabled=true, tag=QQ音乐
-cron "1 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/qtt/qtt.js, img-url=https://qxzy.top/rules/QuantumultX/img/qtt.png, enabled=true, tag=趣头条
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/qunar/qunar.js, img-url=https://qxzy.top/rules/QuantumultX/img/qunar.png, enabled=true, tag=去哪儿
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/rrtv/rrtv.js, img-url=https://qxzy.top/rules/QuantumultX/img/rrtv.png, enabled=true, tag=人人视频
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/sfexpress/sfexpress.js, img-url=https://qxzy.top/rules/QuantumultX/img/sfexpress.png, enabled=true, tag=顺丰速运
