--- a/task/JD_LoonTask.conf
+++ b/task/JD_LoonTask.conf
@@ -37,12 +37,12 @@ cron "10 0 * * *" script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/j
 cron "8 0-23/3 * * *" script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_speed.js, img-url=https://qxzy.top/rules/QuantumultX/img/jdjs.png, tag=京东天天加速
 cron "10 0-23/8 * * *" script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_try.js, img-url=https://qxzy.top/rules/QuantumultX/img/jdjs.png, tag=京东试用
 cron "10 0,7,23 * * *" script-path=https://raw.githubusercontent.com/JDHelloWorld/jd_scripts/main/jd_syj.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_syj.png, tag=赚京豆
-cron "0 8 21-31 5-12 *" script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_gold_creator.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, tag=金榜创造营
-cron "0 0,1-23/3 * * *" script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_mohe.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, tag=5G超级盲盒
-cron "15 10 * * *" script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_electronicsports.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, tag=东东电竞经理
-cron "30 7 * * *" script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_ddpark.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, tag=东东乐园
-cron "1 0-23/1 * 6 *" script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_SplitRedPacket.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, tag=京东天降红包
-cron "20 0-23/3 * * *" script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_jxmc.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, tag=京喜牧场
+cron "0 8 21-31 5-12 *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_gold_creator.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, tag=金榜创造营
+cron "0 0,1-23/3 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_mohe.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, tag=5G超级盲盒
+cron "15 10 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/zwf234/jd_electronicsports.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, tag=东东电竞经理
+cron "30 7 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/zwf234/jd_ddpark.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, tag=东东乐园
+cron "1 0-23/1 * 6 *" script-path=https://qxzy.top/rules/QuantumultX/js/zwf234/jd_SplitRedPacket.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, tag=京东天降红包
+cron "20 0-23/3 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_jxmc.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, tag=京喜牧场
 cron "15 0,6,13,19,21 * * *" script-path=https://raw.githubusercontent.com/zwf234/rules/master/js/jd_jxzpk.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, tag=京东京享值PK
 cron "0 8,12 * * *" script-path=https://raw.githubusercontent.com/zwf234/rules/master/js/jd_zcxyc.js, img-url=https://qxzy.top/rules/QuantumultX/img/jd.png, tag=众筹许愿池
 cron "21 9 * * *" script-path=https://raw.githubusercontent.com/smiek2221/scripts/master/gua_MMdou.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, tag=MM领京豆
