--- a/task/shadowRocket.conf
+++ b/task/shadowRocket.conf
@@ -194,59 +194,59 @@ TF下载 = type=http-request,script-path=https://gist.githubusercontent.com/Noby
 
 清除京东ck = type=cron,script-path=https://raw.githubusercontent.com/zwf234/rules/master/js/jd_Delck.js,cronexpr="* * * * 1/1 ?", timeout=3600, script-update-interval=43200, enable=true
 
-京喜财富岛 = type=cron,script-path=https://qxzy.top/rules/QuantumultX/js/zwf234/jx_cfd.js,cronexpr="0 0 0/1 * * ? ", timeout=3600, script-update-interval=43200, enable=true
+京喜财富岛 = type=cron,script-path=https://raw.githubusercontent.com/smiek2221/scripts/master/gua_wealth_island.js,cronexpr="18 0-23/2 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京喜88红包 = type=cron,script-path=https://qxzy.top/rules/QuantumultX/js/zwf234/jx_88redpacket.js,cronexpr="8 8 * 6 *", timeout=3600, script-update-interval=43200, enable=true
+京喜88红包 = type=cron,script-path=https://qxnav.com/rules/QuantumultX/js/zwf234/jx_88redpacket.js,cronexpr="8 8 * 6 *", timeout=3600, script-update-interval=43200, enable=true
 
 京东白条 = type=cron,script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_baiTiao.js,cronexpr="0 0,9 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东价格保护 = type=cron,script-path=https://raw.githubusercontent.com/ZCY01/daily_scripts/main/jd/jd_priceProtect.js,cronexpr="5 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东天降红包 = type=cron,script-path=https://qxzy.top/rules/QuantumultX/js/zwf234/jd_SplitRedPacket.js,cronexpr="1 0-23/1 * 6 *", timeout=3600, script-update-interval=43200, enable=true
+京东天降红包 = type=cron,script-path=https://qxnav.com/rules/QuantumultX/js/zwf234/jd_SplitRedPacket.js,cronexpr="1 0-23/1 * 6 *", timeout=3600, script-update-interval=43200, enable=true
 
 京东试用 = type=cron,script-path=https://raw.githubusercontent.com/zwf234/rules/master/js/jd_trial.js,cronexpr="30 10 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东京享值PK = type=cron,script-path=https://raw.githubusercontent.com/zwf234/rules/master/js/jd_jxzpk.js,cronexpr="15 0,6,13,19,21 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东新潮品牌狂欢 = type=cron,script-path=https://qxzy.top/rules/QuantumultX/js/zwf234/jd_mcxhd.js,cronexpr="30 9,10 1-18 6 *", timeout=3600, script-update-interval=43200, enable=true
+京东新潮品牌狂欢 = type=cron,script-path=https://qxnav.com/rules/QuantumultX/js/zwf234/jd_mcxhd.js,cronexpr="30 9,10 1-18 6 *", timeout=3600, script-update-interval=43200, enable=true
 
-京喜农场 = type=cron,script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_jxnc.js,cronexpr="0 9,12,18 * * *", timeout=3600, script-update-interval=43200, enable=true
+京喜农场 = type=cron,script-path=https://qxnav.com/rules/QuantumultX/js/lxk0301/jd_jxnc.js,cronexpr="0 9,12,18 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京喜牧场 = type=cron,script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_jxmc.js,cronexpr="20 0-23/3 * * *", timeout=3600, script-update-interval=43200, enable=true
+京喜牧场 = type=cron,script-path=https://qxnav.com/rules/QuantumultX/js/lxk0301/jd_jxmc.js,cronexpr="20 0-23/3 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东城城分现金互助 = type=cron,script-path=https://raw.githubusercontent.com/Ariszy/Private-Script/master/Scripts/zy_ccfxj.js,cronexpr="0 1 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京喜领88元红包 = type=cron,script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_jxlhb.js,cronexpr="4 10 * * *", timeout=3600, script-update-interval=43200, enable=true
+京喜领88元红包 = type=cron,script-path=https://qxnav.com/rules/QuantumultX/js/lxk0301/jd_jxlhb.js,cronexpr="4 10 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东618主会场红包雨 = type=cron,script-path=https://raw.githubusercontent.com/oujisome/jdshell/main/long_hby_lottery.js,cronexpr="1 20 1-18 6 *", timeout=3600, script-update-interval=43200, enable=true
 
-京东京喜阶梯红包 = type=cron,script-path=https://qxzy.top/rules/QuantumultX/js/hf/hf_adolf_jxhb.js,cronexpr="15 9 * 5,6 *", timeout=3600, script-update-interval=43200, enable=true
+京东京喜阶梯红包 = type=cron,script-path=https://qxnav.com/rules/QuantumultX/js/hf/hf_adolf_jxhb.js,cronexpr="15 9 * 5,6 *", timeout=3600, script-update-interval=43200, enable=true
 
-京东超级盒子 = type=cron,script-path=https://qxzy.top/rules/QuantumultX/js/hf/hf_adolf_superbox.js,cronexpr="15 9,20 * 5,6 *", timeout=3600, script-update-interval=43200, enable=true
+京东超级盒子 = type=cron,script-path=https://qxnav.com/rules/QuantumultX/js/hf/hf_adolf_superbox.js,cronexpr="15 9,20 * 5,6 *", timeout=3600, script-update-interval=43200, enable=true
 
 京东领现金兑换10元红包 = type=cron,script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Jd/jd_cash_exchange.js,cronexpr="0,1,2 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 注销京东会员卡 = type=cron,script-path=https://raw.githubusercontent.com/zwf234/rules/master/js/jd_unbind.js,cronexpr="0 9 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-⚠️京东手机狂欢城 = type=cron,script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_carnivalcity.js,cronexpr="2 0-18/6 * 5 *", timeout=3600, script-update-interval=43200, enable=true
+⚠️京东手机狂欢城 = type=cron,script-path=https://qxnav.com/rules/QuantumultX/js/lxk0301/jd_carnivalcity.js,cronexpr="2 0-18/6 * 5 *", timeout=3600, script-update-interval=43200, enable=true
 
-京东Redmi合成小金刚 = type=cron,script-path=https://qxzy.top/rules/QuantumultX/js/hf/hf_adolf_mi.js,cronexpr="20 9 21-27 5 *", timeout=3600, script-update-interval=43200, enable=true
+京东Redmi合成小金刚 = type=cron,script-path=https://qxnav.com/rules/QuantumultX/js/hf/hf_adolf_mi.js,cronexpr="20 9 21-27 5 *", timeout=3600, script-update-interval=43200, enable=true
 
 京东金融领豆（不共用京东ck另抓） = type=cron,script-path=https://raw.githubusercontent.com/dompling/Script/master/jd/jd_jr_sign.js,cronexpr="0 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东到家果园任务 = type=cron,script-path=https://raw.githubusercontent.com/passerby-b/JDDJ/main/jddj_fruit.js,cronexpr="10 0,8,11,17 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东球队赢好礼（不加购） = type=cron,script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/activity/jd_tcl.js,cronexpr="10 16 * * *", timeout=3600, script-update-interval=43200, enable=true
+京东球队赢好礼（不加购） = type=cron,script-path=https://qxnav.com/rules/QuantumultX/js/lxk0301/activity/jd_tcl.js,cronexpr="10 16 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东TCL电视自营 = type=cron,script-path=https://qxzy.top/rules/QuantumultX/js/zwf234/z_tcl_lining.js,cronexpr="25 8 * 4-5 *", timeout=3600, script-update-interval=43200, enable=true
+京东TCL电视自营 = type=cron,script-path=https://qxnav.com/rules/QuantumultX/js/zwf234/z_tcl_lining.js,cronexpr="25 8 * 4-5 *", timeout=3600, script-update-interval=43200, enable=true
 
 京东排行榜 = type=cron,script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_rankingList.js,cronexpr="0 13 9 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-⚠️京东手机狂欢城 = type=cron,script-path=https://qxzy.top/rules/QuantumultX/js/jd_carnivalcity.js,cronexpr="0 0-18/6 * * *", timeout=3600, script-update-interval=43200, enable=true
+⚠️京东手机狂欢城 = type=cron,script-path=https://qxnav.com/rules/QuantumultX/js/jd_carnivalcity.js,cronexpr="0 0-18/6 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东洗护发超级品类日 = type=cron,script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_superDay.js,cronexpr="13 8,10 8-15 3 *", timeout=3600, script-update-interval=43200, enable=true
 
-京东直播 = type=cron,script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_live.js,cronexpr="10-20/5 12 * * *", timeout=3600, script-update-interval=43200, enable=true
+京东直播 = type=cron,script-path=https://qxnav.com/rules/QuantumultX/js/lxk0301/jd_live.js,cronexpr="10-20/5 12 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东小魔方 = type=cron,script-path=https://github.com/jipinwz/i-chenzhe_qx/raw/main/z_xmf.js,cronexpr="10 10 16-18 * *", timeout=3600, script-update-interval=43200, enable=true
 
@@ -254,7 +254,7 @@ TF下载 = type=http-request,script-path=https://gist.githubusercontent.com/Noby
 
 京东到家 = type=cron,script-path=https://raw.githubusercontent.com/GoodHolidays/Scripts/master/Task/jddj.js,cronexpr="0 9 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东全民开红包 = type=cron,script-path=https://qxzy.top/rules/QuantumultX/js/jd_redPacket.js,cronexpr="1 1 * * *", timeout=3600, script-update-interval=43200, enable=true
+京东全民开红包 = type=cron,script-path=https://qxnav.com/rules/QuantumultX/js/jd_redPacket.js,cronexpr="1 1 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京喜财富岛提现 = type=cron,script-path=https://raw.githubusercontent.com/ztxtop/x/aa4ddeca813fbf5c231dd4adaec68a7632cb292c/jx_cfdtx.js,cronexpr="0 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
@@ -262,11 +262,11 @@ TF下载 = type=http-request,script-path=https://gist.githubusercontent.com/Noby
 
 京东物流派件提醒 = type=cron,script-path=https://raw.githubusercontent.com/id77/QuantumultX/master/task/jdWuLiu.js,cronexpr="10 12,18 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东国际盲盒 = type=cron,script-path=https://qxzy.top/rules/QuantumultX/js/jd_global_mh.js,cronexpr="0 9,12,20,21 * * *", timeout=3600, script-update-interval=43200, enable=true
+京东国际盲盒 = type=cron,script-path=https://qxnav.com/rules/QuantumultX/js/jd_global_mh.js,cronexpr="0 9,12,20,21 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东极速版红包 = type=cron,script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_speed_redpocke.js,cronexpr="0 0 * * *", timeout=3600, script-update-interval=43200, enable=true
+京东极速版红包 = type=cron,script-path=https://qxnav.com/rules/QuantumultX/js/lxk0301/jd_speed_redpocke.js,cronexpr="0 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东极速版 = type=cron,script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_speed_sign.js,cronexpr="0 7 * * *", timeout=3600, script-update-interval=43200, enable=true
+京东极速版 = type=cron,script-path=https://qxnav.com/rules/QuantumultX/js/lxk0301/jd_speed_sign.js,cronexpr="0 7 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东价格保护 = type=cron,script-path=https://raw.githubusercontent.com/ZCY01/daily_scripts/main/jd/jd_priceProtect.js,cronexpr="5 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
@@ -274,49 +274,49 @@ TF下载 = type=http-request,script-path=https://gist.githubusercontent.com/Noby
 
 京东赚京东开团 = type=cron,script-path=https://raw.githubusercontent.com/whyour/hundun/master/quanx/jd_zjd_tuan.js,cronexpr="10 * * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东赚赚 = type=cron,script-path=https://qxzy.top/rules/QuantumultX/js/jd_jdzz.js,cronexpr="10 0 * * *", timeout=3600, script-update-interval=43200, enable=true
+京东赚赚 = type=cron,script-path=https://qxnav.com/rules/QuantumultX/js/jd_jdzz.js,cronexpr="10 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京喜工厂商品列表详情 = type=cron,script-path=https://raw.githubusercontent.com/whyour/hundun/master/quanx/jx_products_detail.js,cronexpr="10 10 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京喜农场 = type=cron,script-path=https://qxzy.top/rules/QuantumultX/js/jd_jxnc.js,cronexpr="0 9,12,18 * * *", timeout=3600, script-update-interval=43200, enable=true
+京喜农场 = type=cron,script-path=https://qxnav.com/rules/QuantumultX/js/jd_jxnc.js,cronexpr="0 9,12,18 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东秒秒币 = type=cron,script-path=https://qxzy.top/rules/QuantumultX/js/jd_ms.js,cronexpr="10 7 * * *", timeout=3600, script-update-interval=43200, enable=true
+京东秒秒币 = type=cron,script-path=https://qxnav.com/rules/QuantumultX/js/jd_ms.js,cronexpr="10 7 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京东读书签到 = type=cron,script-path=https://raw.githubusercontent.com/XidNDD/2020scripts/master/jddsSign.js,cronexpr="0 10 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
  京东特权值 = type=cron,script-path=https://raw.githubusercontent.com/iisams/Scripts/master/liwo/jdtqz.js,cronexpr="5 8 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-⚠️京东粉丝专享 = type=cron,script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_wechat_sign.js,cronexpr="1 7 * * *", timeout=3600, script-update-interval=43200, enable=true
+⚠️京东粉丝专享 = type=cron,script-path=https://qxnav.com/rules/QuantumultX/js/lxk0301/jd_wechat_sign.js,cronexpr="1 7 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东家庭号 = type=cron,script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_family.js,cronexpr="1 * * * *", timeout=3600, script-update-interval=43200, enable=true
+京东家庭号 = type=cron,script-path=https://qxnav.com/rules/QuantumultX/js/lxk0301/jd_family.js,cronexpr="1 * * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东保价 = type=cron,script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_price.js,cronexpr="0 2 * * *", timeout=3600, script-update-interval=43200, enable=true
+京东保价 = type=cron,script-path=https://qxnav.com/rules/QuantumultX/js/lxk0301/jd_price.js,cronexpr="0 2 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东宠汪汪 = type=cron,script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_joy.js,cronexpr="15 0-23/2 * * *", timeout=3600, script-update-interval=43200, enable=true
+京东宠汪汪 = type=cron,script-path=https://qxnav.com/rules/QuantumultX/js/lxk0301/jd_joy.js,cronexpr="15 0-23/2 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东宠汪汪喂食 = type=cron,script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_joy_feedPets.js,cronexpr="15 0-23/1 * * *", timeout=3600, script-update-interval=43200, enable=true
+京东宠汪汪喂食 = type=cron,script-path=https://qxnav.com/rules/QuantumultX/js/lxk0301/jd_joy_feedPets.js,cronexpr="15 0-23/1 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京喜签到 = type=cron,script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jx_sign.js,cronexpr="5 0 * * *", timeout=3600, script-update-interval=43200, enable=true
+京喜签到 = type=cron,script-path=https://qxnav.com/rules/QuantumultX/js/lxk0301/jx_sign.js,cronexpr="5 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 京喜工厂助力+自动开团参团 = type=cron,script-path=https://raw.githubusercontent.com/whyour/hundun/master/quanx/jx_factory.js,cronexpr="0/30 * * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东快递签到 = type=cron,script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_kd.js,cronexpr="10 0 * * *", timeout=3600, script-update-interval=43200, enable=true
+京东快递签到 = type=cron,script-path=https://qxnav.com/rules/QuantumultX/js/lxk0301/jd_kd.js,cronexpr="10 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东金融养猪猪 = type=cron,script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_pigPet.js,cronexpr="12 * * * *", timeout=3600, script-update-interval=43200, enable=true
+京东金融养猪猪 = type=cron,script-path=https://qxnav.com/rules/QuantumultX/js/lxk0301/jd_pigPet.js,cronexpr="12 * * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东种豆得豆 = type=cron,script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_plantBean.js,cronexpr="1 7-21/2 * * *", timeout=3600, script-update-interval=43200, enable=true
+京东种豆得豆 = type=cron,script-path=https://qxnav.com/rules/QuantumultX/js/lxk0301/jd_plantBean.js,cronexpr="1 7-21/2 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东天天加速 = type=cron,script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_speed.js,cronexpr="8 0-23/3 * * *", timeout=3600, script-update-interval=43200, enable=true
+京东天天加速 = type=cron,script-path=https://qxnav.com/rules/QuantumultX/js/lxk0301/jd_speed.js,cronexpr="8 0-23/3 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东摇钱树 = type=cron,script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_moneyTree.js,cronexpr="3 0-23/2 * * *", timeout=3600, script-update-interval=43200, enable=true
+京东摇钱树 = type=cron,script-path=https://qxnav.com/rules/QuantumultX/js/lxk0301/jd_moneyTree.js,cronexpr="3 0-23/2 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-取关京东店铺商品 = type=cron,script-path=https://qxzy.top/rules/QuantumultX/js/zwf234/jd_unsubscribe.js,cronexpr="55 23 * * *", timeout=3600, script-update-interval=43200, enable=true
+取关京东店铺商品 = type=cron,script-path=https://qxnav.com/rules/QuantumultX/js/zwf234/jd_unsubscribe.js,cronexpr="55 23 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京喜工厂 = type=cron,script-path=https://qxzy.top/rules/QuantumultX/js/jd_dreamFactory.js,cronexpr="10 * * * *", timeout=3600, script-update-interval=43200, enable=true
+京喜工厂 = type=cron,script-path=https://qxnav.com/rules/QuantumultX/js/jd_dreamFactory.js,cronexpr="10 * * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东汽车 = type=cron,script-path=https://qxzy.top/rules/QuantumultX/js/jd_car.js,cronexpr="10 7 * * *", timeout=3600, script-update-interval=43200, enable=true
+京东汽车 = type=cron,script-path=https://qxnav.com/rules/QuantumultX/js/jd_car.js,cronexpr="10 7 * * *", timeout=3600, script-update-interval=43200, enable=true
 
-京东汽车兑换 = type=cron,script-path=https://qxzy.top/rules/QuantumultX/js/jd_car_exchange.js,cronexpr="0 0 * * *", timeout=3600, script-update-interval=43200, enable=true
+京东汽车兑换 = type=cron,script-path=https://qxnav.com/rules/QuantumultX/js/jd_car_exchange.js,cronexpr="0 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
 ⚠️京东价格提醒 = type=cron,script-path=https://raw.githubusercontent.com/toulanboy/scripts/master/jd_price_detect/jd_price_detect.js,cronexpr="5 0 * * *", timeout=3600, script-update-interval=43200, enable=true
 
