--- a/task/self_Task.conf
+++ b/task/self_Task.conf
@@ -53,7 +53,6 @@ cron "1,31 * * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Privat
 cron "2,32 * * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/kkd.js, img-url=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/img/kkd.png, tag=快看点
 cron "5,35 * * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/fqxs.js, img-url=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/img/fqxs.png, tag=番茄小说
 cron "10 0,8,12,18 * * *" script-path=https://raw.githubusercontent.com/passerby-b/didi_fruit/main/dd_fruit.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/didi.png, tag=滴滴橙心果园
-cron "30 1,8,12,17 * * *" script-path=https://raw.githubusercontent.com/passerby-b/ks_fruit/main/ks_fruit.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/kuaishou.png, tag=快手果园
 cron "30 16,22 * * *" script-path=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/TXSTOCK/txstockqx.js, img-url=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/TXSTOCK/txzxg.png, tag=自选股
 cron "3,30 0 * * *" script-path=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/TXSTOCK/txstockcow.js, img-url=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/TXSTOCK/txzxg.png, tag=自选股长牛来了（看脚本手动加cookie订阅）
 cron "*/30 * * * *" script-path=https://raw.githubusercontent.com/pxylen/abc_/sunert/Task/baidu_speed.js, img-url=https://qxzy.top/rules/QuantumultX/img/baidu_speed.png, tag=百度极速
@@ -62,6 +61,7 @@ cron "0 6,9,10,22 * * *" script-path=https://raw.githubusercontent.com/ziye888/J
 cron "0 6-23 * * *" script-path=https://raw.githubusercontent.com/ziye888/JavaScript/main/Task/dsj.js, img-url=https://cdn.jsdelivr.net/gh/ziye888/JavaScript@main/Task/dsj.png, tag=电视家
 cron "2 */30 * * * *" script-path=https://raw.githubusercontent.com/ziye888/JavaScript/main/Task/qczjspeed.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/qczj.png, tag=汽车之家极速版
 cron "17 9-22 * * *" script-path=https://raw.githubusercontent.com/photonmang/quantumultX/master/58/58.js, img-url=https://raw.githubusercontent.com/sngxpro/icons/main/genshin/anbo.png, tag=58同城
+cron "30 1,8,12,17 * * *" script-path=https://raw.githubusercontent.com/pxylen/abc_/master/scripts/ks_fruit.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/kuaishou.png, tag=快手果园(自用)
 cron "1 6,22 * * *" script-path=https://raw.githubusercontent.com/pxylen/abc_/master/workflow/zZPiglet/me/DiDi_sleep.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/didi.png, tag=滴滴睡觉(自用)
 cron "40 8,20,9-21/2 * * *" script-path=https://raw.githubusercontent.com/pxylen/abc_/master/workflow/zZPiglet/me/DiDi_drink.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/didi.png, tag=滴滴喝水(自用)
 cron "2 0 * * *" script-path=https://raw.githubusercontent.com/pxylen/abc_/master/workflow/zZPiglet/me/DiDi_new.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/didi.png, tag=滴滴出行(自用)
