--- a/task/self_Task.conf
+++ b/task/self_Task.conf
@@ -49,6 +49,7 @@ cron "21 9 * * *" script-path=https://raw.githubusercontent.com/smiek2221/script
 cron "18 0-23/2 * * *" script-path=https://raw.githubusercontent.com/smiek2221/scripts/master/gua_wealth_island.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, tag=财富大陆
 cron "18 0,1,9,14,18 * * *" script-path=https://raw.githubusercontent.com/smiek2221/scripts/master/gua_wealth_island_help.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, tag=财富大陆互助
 cron "1 8,12,18 * * *" script-path=https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/chinnkarahoi_jd_bookshop.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, tag=京东口袋书店
+cron "1 0-23/1 * * *" script-path=https://cdn.jsdelivr.net/gh/pxylen/dog_jd@master/jd_super_redrain.js, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, tag=整点京豆雨
 cron "1,31 * * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/jrtt.js, img-url=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/img/jrtt.png, tag=今日头条极速版
 cron "2,32 * * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/kkd.js, img-url=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/img/kkd.png, tag=快看点
 cron "5,35 * * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/fqxs.js, img-url=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/img/fqxs.png, tag=番茄小说
