--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,6 +2,7 @@
 # 电报频道 @qixinscience
 
 cron "* * * * 1/1 ?" script-path=https://raw.githubusercontent.com/zwf234/rules/master/js/jd_Delck.js, img-url=https://qxnav.com/rules/QuantumultX/img/jd.png, enabled=true, tag=清除京东ck
+cron "11 2,11 * * *" script-path=https://qxnav.com/rules/QuantumultX/js/zwf234/jd_opencard_Daddy.js, img-url=https://qxnav.com/rules/QuantumultX/img/jd.png, enabled=true, tag=奶爸盛典
 cron "0 8 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Bahamut/BahamutDailyBonus.js, img-url=https://qxnav.com/rules/QuantumultX/img/bahamutGame.png, tag=巴哈姆特签到
 cron "0 0 0,5,9,14,20 * * ?" script-path=https://qxnav.com/rules/QuantumultX/js/zwf234/jx_hotballoon.js, img-url=https://qxnav.com/rules/QuantumultX/img/jxcfd.png, enabled=true, tag=财富岛热气球
 cron "18 0-23/2 * * *" script-path=https://raw.githubusercontent.com/smiek2221/scripts/master/gua_wealth_island.js, img-url=https://qxnav.com/rules/QuantumultX/img/jxcfd.png, enabled=true, tag=京喜财富岛
