--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -324,7 +324,7 @@ cron "10 7 * * *" script-path=https://qxnav.com/rules/QuantumultX/js/jd_bean_hom
 cron "10 7 * * *" script-path=https://qxnav.com/rules/QuantumultX/js/jd_car.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_car.png, enabled=true, tag=京东汽车
 cron "0 0 * * *" script-path=https://qxnav.com/rules/QuantumultX/js/jd_car_exchange.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jd_redPacket.png, enabled=true, tag=京东汽车兑换
 cron "5 0 * * *" script-path=https://raw.githubusercontent.com/toulanboy/scripts/master/jd_price_detect/jd_price_detect.js, img-url=https://qxnav.com/rules/QuantumultX/img/jd.png, enabled=true, tag=⚠️京东价格提醒
-cron "15 17 * * *" script-path=https://qxnav.com/rules/QuantumultX/js/backUp/xmSports.js, img-url=https://raw.githubusercontent.com/58xinian/icon/master/xmyd.png, tag=小米运动
+cron "15 17 * * *" script-path=https://raw.githubusercontent.com/zwf234/rules/master/js/xiaomi.js, img-url=https://qxnav.com/rules/QuantumultX/img/xiaomi.png, tag=小米运动
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, img-url=https://qxnav.com/rules/QuantumultX/img/box.png, enabled=true, tag=切换会话
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/52pojie-DailyBonus/52pojie.js, img-url=https://qxnav.com/rules/QuantumultX/img/52pj.png, enabled=true, tag=吾爱破解
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js, img-url=https://qxnav.com/rules/QuantumultX/img/iQIYI.png, enabled=true, tag=爱奇艺
