--- a/rule/task.conf
+++ b/rule/task.conf
@@ -1,8 +1,8 @@
 
 
 
-cron "*/30 * * * *" script-path=https://raw.githubusercontent.com/pxylen/abc_/sunert/Task/baidu_speed.js, img-url=https://qxzy.top/rules/QuantumultX/img/baidu_speed.png, enable=false, tag=百度极速
-cron "*/10 0-1 6 * * *" script-path=https://raw.githubusercontent.com/pxylen/abc_/master/scripts/baidu_speed_cash.js, img-url=https://qxzy.top/rules/QuantumultX/img/baidu_speed.png, enable=false, tag=百度极速版提现
+cron "*/30 * * * *" script-path=https://raw.githubusercontent.com/pxylen/abc_/sunert/Task/baidu_speed.js, img-url=https://qxnav.com/rules/QuantumultX/img/baidu_speed.png, enable=false, tag=百度极速
+cron "*/10 0-1 6 * * *" script-path=https://raw.githubusercontent.com/pxylen/abc_/master/scripts/baidu_speed_cash.js, img-url=https://qxnav.com/rules/QuantumultX/img/baidu_speed.png, enable=false, tag=百度极速版提现
 
 
 # 0点自动脚本
