--- a/task/zhiyi.conf
+++ b/task/zhiyi.conf
@@ -16,14 +16,14 @@ cron " 15 12,14,16,20 * * *" script-path=https://raw.githubusercontent.com/age17
 cron " 1,30 10-20 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/ranlv.js, img-url=https://raw.githubusercontent.com/Se7eNcBoT/MyXP/master/Icons/ZhiYi/ranlv_144x.png, enabled=true, tag=燃旅视频
 cron " 15 10 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/mhdsp.js, img-url= https://gitee.com/ydj0602/hym/raw/img/MHDSP.png, enabled=true, tag=陌嗨短视频
 cron " 10 */1 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/zmsp.js, img-url= https://s3.ax1x.com/2021/02/06/yYzeWn.png, enabled=true, tag=芝嫲视频
-cron "*/6 * * * *" script-path=https://qxzy.top/rules/QuantumultX/js/ZIYE/Task/iboxpay.js, img-url=https://qxzy.top/rules/QuantumultX/img/xp.png, enabled=true, tag=笑谱ziye版
+cron "*/6 * * * *" script-path=https://qxnav.com/rules/QuantumultX/js/ZIYE/Task/iboxpay.js, img-url=https://qxnav.com/rules/QuantumultX/img/xp.png, enabled=true, tag=笑谱ziye版
 cron "*/5 6-23 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/huoshan.js, enabled=true, tag=抖音火山版
-cron " 5,35 8-23 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/zy/jrtt.js, img-url=https://qxzy.top/rules/QuantumultX/img/jrtt.png, enabled=false, tag=今日头条极速版
-cron " 40 * * * *" script-path=https://qxzy.top/rules/QuantumultX/js/zy/dyjsb.js, img-url=https://qxzy.top/rules/QuantumultX/img/dyjsb.png, enabled=false, tag=抖音极速版
-cron " 0,30 * * * *" script-path=https://raw.githubusercontent.com/adwktt/adwktt/master/BBB.js, img-url=https://qxzy.top/rules/QuantumultX/img/bbb.png, enabled=true, tag=步步宝,
+cron " 5,35 8-23 * * *" script-path=https://qxnav.com/rules/QuantumultX/js/zy/jrtt.js, img-url=https://qxnav.com/rules/QuantumultX/img/jrtt.png, enabled=false, tag=今日头条极速版
+cron " 40 * * * *" script-path=https://qxnav.com/rules/QuantumultX/js/zy/dyjsb.js, img-url=https://qxnav.com/rules/QuantumultX/img/dyjsb.png, enabled=false, tag=抖音极速版
+cron " 0,30 * * * *" script-path=https://raw.githubusercontent.com/adwktt/adwktt/master/BBB.js, img-url=https://qxnav.com/rules/QuantumultX/img/bbb.png, enabled=true, tag=步步宝,
 cron "*/20 0-23 * * *" script-path=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/CONGHUA/chonghua.js, img-url=https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/chonghua.png, enabled=true, tag=葱花视频
 cron " 30 7-23 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/baidu_speed.js, img-url=https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/baidu_speed.png, enabled=false, tag=百度极速版
-cron " 0 12,23 * * *" script-path=https://raw.githubusercontent.com/6Svip120apk69/gitee_ziye12_JavaScript/master/Task/flw.js, img-url=https://qxzy.top/rules/QuantumultX/img/fanli.png, enabled=true, tag=新返利-0.8¥
+cron " 0 12,23 * * *" script-path=https://raw.githubusercontent.com/6Svip120apk69/gitee_ziye12_JavaScript/master/Task/flw.js, img-url=https://qxnav.com/rules/QuantumultX/img/fanli.png, enabled=true, tag=新返利-0.8¥
 cron " 35 5 0 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/kuaishou.js, img-url=https://raw.githubusercontent.com/ChuheGit/1/main/QuantumultX/Gallery/API-Icon/kuaishou.png, enabled=true, tag=快手极速版
 cron " 00 16 * * *" script-path=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/TXSTOCK/txstockqx.js, img-url=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/TXSTOCK/txzxg.png, enabled=true, tag=腾讯自选股
 cron " 3,30 0 * * *" script-path=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/TXSTOCK/txstockcow.js, img-url=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/TXSTOCK/txzxg.png, enabled=true, tag=活动-长牛来了
