--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,6 +2,8 @@
 # 电报频道 @qixinscience
 
 cron "* * * * 1/1 ?" script-path=https://raw.githubusercontent.com/zwf234/rules/master/js/jd_Delck.js, img-url=https://qxnav.com/rules/QuantumultX/img/jd.png, enabled=true, tag=清除京东ck
+cron "0 8-22/3 * * *" script-path=https://raw.githubusercontent.com/Peng-YM/QuanX/master/Tasks/nCov.js, img-url=https://qxnav.com/rules/QuantumultX/img/COVID-19.png, enabled=true, tag=疫情动态
+cron "11 2,11 * * *" script-path=https://qxnav.com/rules/QuantumultX/js/zwf234/virmach.js, img-url=https://qxnav.com/rules/QuantumultX/img/jd.png, enabled=true, tag=流量查询
 cron "11 2,11 * * *" script-path=https://qxnav.com/rules/QuantumultX/js/zwf234/jd_opencard_Daddy.js, img-url=https://qxnav.com/rules/QuantumultX/img/jd.png, enabled=true, tag=奶爸盛典
 cron "0 8 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Bahamut/BahamutDailyBonus.js, img-url=https://qxnav.com/rules/QuantumultX/img/bahamutGame.png, tag=巴哈姆特签到
 cron "0 0 0,5,9,14,20 * * ?" script-path=https://qxnav.com/rules/QuantumultX/js/zwf234/jx_hotballoon.js, img-url=https://qxnav.com/rules/QuantumultX/img/jxcfd.png, enabled=true, tag=财富岛热气球
@@ -421,7 +423,7 @@ cron "1 0 * * *" script-path=https://raw.githubusercontent.com/songyangzz/Quantu
 cron "0 0 0,1 * * ?" script-path=https://raw.githubusercontent.com/lowking/Scripts/master/douyu/yubaSign.js, img-url=https://qxnav.com/rules/QuantumultX/img/douyu.png, enabled=true, tag=斗鱼鱼吧
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/songyangzz/QuantumultX/master/lol.js, img-url=https://qxnav.com/rules/QuantumultX/img/lol.png, enabled=true, tag=LOL排行查询
 cron "5 0 * * *" script-path=https://raw.githubusercontent.com/toulanboy/scripts/master/muchong/muchong.js, img-url=https://qxnav.com/rules/QuantumultX/img/muchong.png, enabled=true, tag=小木虫论坛
-cron "0 9 * * *" script-path=https://raw.githubusercontent.com/GoodHolidays/Scripts/master/Task/dianshijia.js, img-url=https://qxnav.com/rules/QuantumultX/img/dianshijia.png, enabled=true, tag=电视家
+cron "0 0 6-23 * * *" script-path=https://cdn.jsdelivr.net/gh/ziye888/JavaScript@main/Task/dsj.js, img-url=https://qxnav.com/rules/QuantumultX/img/dianshijia.png, enabled=true, tag=电视家
 cron "0 10 * * *" script-path=https://raw.githubusercontent.com/GoodHolidays/Scripts/master/Task/exchangeRate.js, img-url=https://qxnav.com/rules/QuantumultX/img/exchangerate.png, enabled=true, tag=实时货币换算
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/GoodHolidays/Scripts/master/Task/lkyl.js, img-url=https://qxnav.com/rules/QuantumultX/img/lkyl.png, enabled=true, tag=来客有礼
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/GoodHolidays/Scripts/master/Task/sinanews.js, img-url=https://qxnav.com/rules/QuantumultX/img/sinanews.png, enabled=true, tag=新浪新闻
